@@ -15,6 +15,7 @@ import java.nio.channels.FileChannel;
 import com.kenai.constantine.platform.Errno;
 import org.jruby.ext.posix.util.Platform;
 import org.python.core.Py;
+import org.python.core.PyString;
 import org.python.core.util.RelativeFile;
 import org.python.modules.posix.PosixModule;
 
@@ -50,6 +51,13 @@ public class FileIO extends RawIOBase {
     private boolean emulateAppend;
 
     /**
+     * @see #FileIO(PyString name, String mode)
+     */
+    public FileIO(String name, String mode) {
+        this(Py.newString(name), mode);
+    }
+
+    /**
      * Construct a FileIO instance for the specified file name.
      *
      * The mode can be 'r', 'w' or 'a' for reading (default), writing
@@ -59,9 +67,9 @@ public class FileIO extends RawIOBase {
      * @param name the name of the file
      * @param mode a raw io file mode String
      */
-    public FileIO(String name, String mode) {
+    public FileIO(PyString name, String mode) {
         parseMode(mode);
-        File absPath = new RelativeFile(name);
+        File absPath = new RelativeFile(name.toString());
 
         try {
             if (appending && !(reading || plus)) {
